--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.cc.gogo.MainActivity">
+    tools:context="com.example.cc.gogo.Activities.MainActivity">
 
     <FrameLayout
         android:id="@+id/layFrame"
