--- a/gogo/src/main/res/layout/fragment_music.xml
+++ b/gogo/src/main/res/layout/fragment_music.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cc.gogo.MusicFragment">
+    tools:context="com.example.cc.gogo.Activities.MusicActivity">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
