--- a/gogo/src/main/res/xml/bottombar_tabs_color_changing.xml
+++ b/gogo/src/main/res/xml/bottombar_tabs_color_changing.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tabs>
     <tab
-        id="@+id/home"
+        barColorWhenSelected="@color/colorAccent"
         icon="@drawable/home"
-        title="Home"
-        barColorWhenSelected="@color/colorAccent" />
+        id="@+id/home"
+        title="Home" />
     <tab
-        id="@+id/sport"
+        barColorWhenSelected="#5D4037"
         icon="@drawable/sport"
-        title="Advice"
-        barColorWhenSelected="#5D4037" />
+        id="@+id/sport"
+        title="Advice" />
     <tab
-        id="@+id/run"
+        barColorWhenSelected="#7B1FA2"
         icon="@drawable/watch"
-        title="Run"
-        barColorWhenSelected="#7B1FA2" />
+        id="@+id/run"
+        title="Run" />
     <tab
-    id="@+id/music"
-    icon="@drawable/music"
-    title="Music"
-    barColorWhenSelected="#FF5252" />
+        barColorWhenSelected="#FF5252"
+        icon="@drawable/music"
+        id="@+id/music"
+        title="Music" />
     <tab
-    id="@+id/setting"
-    icon="@drawable/config"
-    title="Setting"
-    barColorWhenSelected="#FF9800" />
-
-
+        barColorWhenSelected="#FF9800"
+        icon="@drawable/config"
+        id="@+id/setting"
+        title="Setting" />
 </tabs>
