--- a/gogo/src/main/res/layout/activity_collection_menu.xml
+++ b/gogo/src/main/res/layout/activity_collection_menu.xml
@@ -4,10 +4,10 @@
     android:id="@+id/activity_collection_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="16dp"
     tools:context="com.example.cc.gogo.Activities.CollectionMenuActivity">
 
     <LinearLayout
@@ -15,61 +15,35 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
-            android:background="#d0d0d0" />
-
-
         <Button
             android:id="@+id/walk"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
+            android:layout_margin="40dp"
             android:layout_weight="1"
             android:background="@drawable/step_btn_background"
-            android:text="走路"
+            android:text="走路数据收集"
             android:textColor="@drawable/step_btn_color" />
 
         <Button
             android:id="@+id/run"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
+            android:layout_margin="40dp"
             android:layout_weight="1"
             android:background="@drawable/step_btn_background"
-            android:text="跑步"
+            android:text="跑步数据收集"
             android:textColor="@drawable/step_btn_color" />
 
         <Button
             android:id="@+id/still"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
+            android:layout_margin="40dp"
             android:layout_weight="1"
             android:background="@drawable/step_btn_background"
-            android:text="静止"
+            android:text="静止数据收集"
             android:textColor="@drawable/step_btn_color" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
-            android:background="#d0d0d0" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/darker_gray" />
 
     </LinearLayout>
 
