add aim fragment

--- a/gogo/src/main/res/xml/bottombar_tabs_color_changing.xml
+++ b/gogo/src/main/res/xml/bottombar_tabs_color_changing.xml
@@ -8,7 +8,7 @@
     <tab
         barColorWhenSelected="#5D4037"
         icon="@drawable/sport"
-        id="@+id/sport"
+        id="@+id/advice"
         title="Advice" />
     <tab
         barColorWhenSelected="#7B1FA2"
