--- a/gogo/src/main/res/layout/fragment_run.xml
+++ b/gogo/src/main/res/layout/fragment_run.xml
@@ -128,6 +128,15 @@
                 android:background="@drawable/step_btn_background"
                 android:text="@string/tab_fragment_step_bt_control"
                 android:textColor="@drawable/step_btn_color" />
+            <Button
+                android:id="@+id/btn_pause"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/step_btn_background"
+                android:text="@string/tab_fragment_step_bt_pause"
+                android:textColor="@drawable/step_btn_color" />
         </LinearLayout>
 
         <TextView
@@ -136,6 +145,81 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@android:color/darker_gray" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textColor="#7B7B7B"
+                android:text="@string/step_msg_calorie" />
+
+            <TextView
+                android:id="@+id/tv_calorie"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@android:color/holo_blue_light"
+                android:textSize="30sp"
+                android:text="@string/step_msg_tv_calorie" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#7B7B7B"
+                android:textSize="15sp"
+                android:text="@string/step_msg_distance" />
+
+            <TextView
+                android:id="@+id/tv_distance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:textColor="@android:color/holo_blue_light"
+                android:text="@string/step_msg_tv_distance" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textColor="#7B7B7B"
+                android:text="@string/step_msg_speed" />
+
+            <TextView
+                android:id="@+id/tv_velocity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:textColor="@android:color/holo_blue_light"
+                android:text="@string/step_msg_tv_speed" />
+        </LinearLayout>
+        </LinearLayout>
 
         <!-- <include layout="@layout/step_msg" />
  -->
