add frequency in profile & add LinearRegression(incomplete)&delete main in MainActivity

--- a/duaui/src/main/res/layout/dua_activity_profile.xml
+++ b/duaui/src/main/res/layout/dua_activity_profile.xml
@@ -243,6 +243,47 @@
                 android:layout_marginRight="12dp"
                 android:background="#dadada" />
         </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_frequency"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/dua_bg_btn_list_item"
+            android:clickable="true" >
+
+            <TextView
+                android:id="@+id/tv_temp_frequency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:text="运动频率"
+                android:textColor="#353535"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_frequency"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp"
+                android:layout_toRightOf="@id/tv_temp_frequency"
+                android:ellipsize="end"
+                android:gravity="right"
+                android:textColor="#AAAAAA"
+                android:textSize="14sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:background="#dadada" />
+        </RelativeLayout>
+
         <RelativeLayout
         android:id="@+id/rl_sign"
         android:layout_width="match_parent"
