--- a/gogo/src/main/res/xml/bottombar_tabs_color_changing.xml
+++ b/gogo/src/main/res/xml/bottombar_tabs_color_changing.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tabs>
-    <tab
+    <!--<tab
         barColorWhenSelected="@color/colorAccent"
         icon="@drawable/home"
         id="@+id/home"
-        title="Home" />
+        title="Home" />-->
     <tab
         barColorWhenSelected="#5D4037"
         icon="@drawable/sport"
