--- a/gogo/src/main/res/layout/activity_my_aim.xml
+++ b/gogo/src/main/res/layout/activity_my_aim.xml
@@ -31,6 +31,7 @@
             android:textColor="@color/black"
             android:textSize="25sp" />
         <TextView
+            android:id="@+id/target_step"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
