--- a/gogo/src/main/res/layout/fragment_run.xml
+++ b/gogo/src/main/res/layout/fragment_run.xml
@@ -5,100 +5,62 @@
     tools:context="com.example.cc.gogo.Fragments.RunFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
         <TextView
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/darker_gray" />
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="步行"
+            android:textColor="#7B7B7B"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:fontFamily="sans-serif" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:orientation="horizontal" >
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="步行"
-                    android:textColor="#7B7B7B"
-                    android:textSize="15sp"
-                    android:textAlignment="center"
-                    android:fontFamily="sans-serif" />
-
-            </LinearLayout>
-        </LinearLayout>
 
 
         <TextView
+            android:layout_marginTop="60dp"
             android:id="@+id/tv_walk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/tab_fragment_step_tv_step"
             android:textColor="#ff33b5e5"
-            android:textSize="50sp" />
+            android:textSize="100sp" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:orientation="horizontal" >
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="跑步"
-                    android:textColor="#7B7B7B"
-                    android:textSize="15sp"
-                    android:textAlignment="center" />
-
-            </LinearLayout>
-        </LinearLayout>
 
 
         <TextView
+            android:layout_marginTop="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="跑步"
+            android:textColor="#7B7B7B"
+            android:textSize="30sp"
+            android:textAlignment="center" />
+
+
+        <TextView
+            android:layout_marginTop="230dp"
             android:id="@+id/tv_run"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/tab_fragment_step_tv_step"
             android:textColor="#ff33b5e5"
-            android:textSize="50sp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
-            android:background="#d0d0d0" />
+            android:textSize="100sp" />
 
         <LinearLayout
+            android:layout_marginTop="430dp"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="15dp"
             android:orientation="horizontal" >
 
             <Button
@@ -139,13 +101,8 @@
                 android:textColor="@drawable/step_btn_color" />
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/darker_gray" />
         <LinearLayout
+            android:layout_marginTop="360dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -221,25 +178,7 @@
         </LinearLayout>
         </LinearLayout>
 
-        <!-- <include layout="@layout/step_msg" />
- -->
-        <!--   <TextView
-               android:layout_width="match_parent"
-               android:layout_height="1dp"
-               android:layout_marginBottom="10dp"
-               android:layout_marginLeft="15dp"
-               android:layout_marginRight="15dp"
-               android:layout_marginTop="10dp"
-               android:background="#d0d0d0" />
 
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="1dp"
-               android:layout_marginBottom="10dp"
-               android:layout_marginTop="10dp"
-               android:background="@android:color/darker_gray" />-->
-
-
-    </LinearLayout>
+    </RelativeLayout>
 
 </FrameLayout>
