--- a/duaui/src/main/res/layout/dua_activity_login.xml
+++ b/duaui/src/main/res/layout/dua_activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-
+android:background="@drawable/a7"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,8 +25,8 @@
         android:gravity="center_vertical">
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/dua_fragment_root">
+            android:id="@+id/dua_fragment_root"
+            android:layout_height="300dp">
         </FrameLayout>
 
     </LinearLayout>
